--- a/AutoMall/Base.lproj/Main.storyboard
+++ b/AutoMall/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,7 +15,6 @@
                 <navigationController id="FLK-OX-Pv4" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Y65-ML-qdh"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="FcZ-e5-6QA">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -39,17 +38,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NJo-XH-TUQ">
-                                <rect key="frame" x="10" y="0.0" width="355" height="667"/>
+                                <rect key="frame" x="16" y="0.0" width="343" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="RbZ-Z9-Vti">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="20" id="RbZ-Z9-Vti">
                                     <size key="itemSize" width="112" height="210"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="20"/>
+                                    <inset key="sectionInset" minX="0.0" minY="20" maxX="0.0" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="upkeepHomeCollectionCell" id="7Ty-62-hd2" customClass="UpkeepHomeCollectionCell">
-                                        <rect key="frame" x="0.0" y="10" width="112" height="210"/>
+                                        <rect key="frame" x="0.0" y="20" width="112" height="210"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="112" height="210"/>
@@ -58,7 +57,7 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="check_default" translatesAutoresizingMaskIntoConstraints="NO" id="9jZ-UH-S3r">
                                                     <rect key="frame" x="0.0" y="0.0" width="112" height="176"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="快速保养检查" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ywp-Ou-Lhv">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="快速保养检查" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="Ywp-Ou-Lhv">
                                                     <rect key="frame" x="0.0" y="184" width="112" height="18"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <constraints>
@@ -95,9 +94,9 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="NJo-XH-TUQ" firstAttribute="top" secondItem="tsR-hK-woN" secondAttribute="top" id="0UH-ni-F1J"/>
-                            <constraint firstAttribute="trailing" secondItem="NJo-XH-TUQ" secondAttribute="trailing" constant="10" id="ECq-Bw-aiJ"/>
+                            <constraint firstAttribute="trailing" secondItem="NJo-XH-TUQ" secondAttribute="trailing" constant="16" id="ECq-Bw-aiJ"/>
                             <constraint firstAttribute="bottom" secondItem="NJo-XH-TUQ" secondAttribute="bottom" id="oSg-4P-lQZ"/>
-                            <constraint firstItem="NJo-XH-TUQ" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" constant="10" id="rbN-BM-4WL"/>
+                            <constraint firstItem="NJo-XH-TUQ" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" constant="16" id="rbN-BM-4WL"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
@@ -116,7 +115,6 @@
                 <navigationController id="dUV-mP-trR" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Bms-Jy-HS6"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="yTk-Nz-Dwj">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -345,7 +343,6 @@
                 <navigationController id="leZ-Jl-Ahm" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="jKQ-7u-8hm"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="A6f-qy-k90">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -362,7 +359,6 @@
                 <navigationController id="bn1-fA-xYY" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="xjg-Qk-JJ8"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="u1v-Hf-Tcm">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
