--- a/AutoMall/ViewControllers/Upkeep/CarInfoAddVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/CarInfoAddVC.xib
@@ -238,7 +238,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(必填)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EHZ-mx-uex">
-                                            <rect key="frame" x="47" y="56" width="41" height="21"/>
+                                            <rect key="frame" x="47" y="56" width="42" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="hBQ-uw-yFx"/>
                                             </constraints>
@@ -247,7 +247,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="姓名" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ibb-0l-SPH">
-                                            <rect key="frame" x="96" y="52" width="263" height="30"/>
+                                            <rect key="frame" x="97" y="52" width="262" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="LSl-eO-KYX"/>
                                             </constraints>
@@ -297,7 +297,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <textField opaque="NO" clipsSubviews="YES" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="电话" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LVf-6W-hRq">
-                                            <rect key="frame" x="96" y="97" width="263" height="30"/>
+                                            <rect key="frame" x="97" y="97" width="262" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="4xq-FG-dAV"/>
                                             </constraints>
@@ -402,7 +402,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(必填)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e4D-4P-ehb">
-                                            <rect key="frame" x="47" y="101" width="41" height="21"/>
+                                            <rect key="frame" x="47" y="101" width="42" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="BaZ-j5-AJL"/>
                                             </constraints>
@@ -513,7 +513,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(必填)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lko-oe-pJh">
-                                            <rect key="frame" x="62" y="56" width="41" height="21"/>
+                                            <rect key="frame" x="62" y="56" width="42" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="tlt-rY-r5Z"/>
                                             </constraints>
@@ -522,7 +522,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <textField opaque="NO" clipsSubviews="YES" tag="7" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="车牌号" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pi7-dO-0mk">
-                                            <rect key="frame" x="111" y="52" width="248" height="30"/>
+                                            <rect key="frame" x="112" y="52" width="247" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="ClF-FN-LWe"/>
                                             </constraints>
@@ -553,7 +553,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(必填)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m5x-YU-Cav">
-                                            <rect key="frame" x="47" y="101" width="41" height="21"/>
+                                            <rect key="frame" x="47" y="101" width="42" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="lv2-5T-GNe"/>
                                             </constraints>
@@ -562,7 +562,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <textField opaque="NO" clipsSubviews="YES" tag="8" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="品牌" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UJs-q1-lkf">
-                                            <rect key="frame" x="96" y="97" width="263" height="30"/>
+                                            <rect key="frame" x="97" y="97" width="262" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="7L2-4B-dBz"/>
                                             </constraints>
@@ -593,7 +593,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <textField opaque="NO" clipsSubviews="YES" tag="9" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="车型" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X9Z-8r-go2">
-                                            <rect key="frame" x="96" y="141.5" width="263" height="30"/>
+                                            <rect key="frame" x="97" y="141.5" width="262" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="L8F-ep-dSq"/>
                                             </constraints>
@@ -761,7 +761,7 @@
                                             </connections>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(必填)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vSu-sC-rwe">
-                                            <rect key="frame" x="47" y="146" width="41" height="21"/>
+                                            <rect key="frame" x="47" y="146" width="42" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="gDG-EU-ttx"/>
                                             </constraints>
@@ -894,7 +894,7 @@
                             <rect key="frame" x="187.5" y="0.0" width="187.5" height="49"/>
                             <color key="backgroundColor" red="0.96862745098039216" green="0.58039215686274503" blue="0.11372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                            <state key="normal" title="保存并选择"/>
+                            <state key="normal" title="保存并进入检查"/>
                             <connections>
                                 <action selector="selectAction:" destination="-1" eventType="touchUpInside" id="Als-p7-eR5"/>
                             </connections>
